# vasyan

./: CMakeLists.txt  build.bat  main.cpp
Network/: NetworkSender.cpp  NetworkSender.h  TrafficMonitor.cpp  TrafficMonitor.h
Utils/: Il2Cpp.cpp  Il2Cpp.h  Logger.h  NetworkSender.cpp  NetworkSender.h  Spoofer.cpp  Spoofer.h  Utils.cpp  Utils.h
